@@ -1,3 +1,6 @@
+20 Aug 2004 mipsator
+ * move backup right before copy of new config file.
+
 19 Aug 2004 mreindl
  * backup pmk.conf in pmksetup if it already exists
  * update bin_c sample and integrate it into samples/Makefile
